<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.apparte.tema1animacionpropiedades.MainActivity"
    android:orientation="vertical">

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/oneplayer"
        android:id="@+id/oneplayer"
        android:onClick="onClickOnePlayer"
        android:layout_gravity="center" />

    <Button
        android:id="@+id/twoplayer"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/twoplayer"
        android:layout_gravity="center" />

    <Button
        android:id="@+id/sonido"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:onClick="onClickConfiguration"
        android:text="@string/settings"
        android:layout_gravity="center" />
</LinearLayout>
